--- a/public/index.html
+++ b/public/index.html
@@ -19,8 +19,9 @@
 
     <script type="text/javascript">
     
-        var socket = io('http://localhost:3000');
-
+       // var socket = io('http://localhost:3001');
+ var origin = window.location.origin;
+  var socket = io.connect(origin);
         function renderMessage(message){
             $('.messages').append('<div class="message"><strong>'+ message.author +'</strong>:'+ message.message +' </div>')
         }
